--- a/merge_data.ipynb
+++ b/merge_data.ipynb
@@ -70,7 +70,7 @@
        "      <td>0</td>\n",
        "      <td>+26.3007548</td>\n",
        "      <td>-097.9852980</td>\n",
-       "      <td>POLYGON ((-97.99352 26.30795, -97.9774 26.3082...</td>\n",
+       "      <td>POLYGON ((-97.99352 26.30795, -97.99303 26.307...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -87,7 +87,7 @@
        "      <td>47753</td>\n",
        "      <td>+30.9074958</td>\n",
        "      <td>-095.4874927</td>\n",
-       "      <td>POLYGON ((-95.50068 30.91437, -95.49717 30.916...</td>\n",
+       "      <td>POLYGON ((-95.50068 30.91437, -95.50023 30.914...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -104,7 +104,7 @@
        "      <td>1356845</td>\n",
        "      <td>+30.8346930</td>\n",
        "      <td>-095.4676622</td>\n",
-       "      <td>POLYGON ((-95.52161 30.82675, -95.51936 30.841...</td>\n",
+       "      <td>POLYGON ((-95.5211 30.82847, -95.52109 30.8285...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -121,7 +121,7 @@
        "      <td>0</td>\n",
        "      <td>+26.3714016</td>\n",
        "      <td>-097.9668206</td>\n",
-       "      <td>POLYGON ((-98.00247 26.36765, -97.99862 26.389...</td>\n",
+       "      <td>POLYGON ((-98.00229 26.36873, -98.00229 26.368...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -138,7 +138,7 @@
        "      <td>0</td>\n",
        "      <td>+26.3017062</td>\n",
        "      <td>-097.9297734</td>\n",
-       "      <td>POLYGON ((-97.94511 26.30868, -97.91306 26.309...</td>\n",
+       "      <td>POLYGON ((-97.94511 26.30868, -97.94499 26.308...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -160,11 +160,11 @@
        "4  Block Group 2  G5030        S   4897517        0  +26.3017062   \n",
        "\n",
        "       INTPTLON                                           geometry  \n",
-       "0  -097.9852980  POLYGON ((-97.99352 26.30795, -97.9774 26.3082...  \n",
-       "1  -095.4874927  POLYGON ((-95.50068 30.91437, -95.49717 30.916...  \n",
-       "2  -095.4676622  POLYGON ((-95.52161 30.82675, -95.51936 30.841...  \n",
-       "3  -097.9668206  POLYGON ((-98.00247 26.36765, -97.99862 26.389...  \n",
-       "4  -097.9297734  POLYGON ((-97.94511 26.30868, -97.91306 26.309...  "
+       "0  -097.9852980  POLYGON ((-97.99352 26.30795, -97.99303 26.307...  \n",
+       "1  -095.4874927  POLYGON ((-95.50068 30.91437, -95.50023 30.914...  \n",
+       "2  -095.4676622  POLYGON ((-95.5211 30.82847, -95.52109 30.8285...  \n",
+       "3  -097.9668206  POLYGON ((-98.00229 26.36873, -98.00229 26.368...  \n",
+       "4  -097.9297734  POLYGON ((-97.94511 26.30868, -97.94499 26.308...  "
       ]
      },
      "execution_count": 2,
@@ -173,13 +173,13 @@
     }
    ],
    "source": [
-    "# Load the counties shapefile from the census bureau\n",
+    "# Load the blockgroups shapefile from the census bureau\n",
     "blockgroups_url = \"https://www2.census.gov/geo/tiger/TIGER2024/BG/tl_2024_48_bg.zip\"\n",
     "blockgroups_path = \"C:/Python3/notebooks/travis_tx_aian_cnt-map/tl_2024_48_bg.zip\" #downloaded because of firewall issue?\n",
     "blockgroups = gpd.read_file(blockgroups_path)\n",
     "\n",
     "# Simplify county boundaries to save memory\n",
-    "blockgroups.loc[:, 'geometry'] = blockgroups['geometry'].simplify(tolerance=0.001)\n",
+    "blockgroups.loc[:, 'geometry'] = blockgroups['geometry'] #.simplify(tolerance=0.001)\n",
     "\n",
     "blockgroups.head()"
    ]
@@ -341,35 +341,35 @@
        "      <td>1500000US484530001011</td>\n",
        "      <td>Block Group 1; Census Tract 1.01; Travis Count...</td>\n",
        "      <td>23</td>\n",
-       "      <td>POLYGON ((-97.75553 30.33075, -97.75528 30.336...</td>\n",
+       "      <td>POLYGON ((-97.75546 30.33233, -97.75538 30.335...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1500000US484530001012</td>\n",
        "      <td>Block Group 2; Census Tract 1.01; Travis Count...</td>\n",
        "      <td>0</td>\n",
-       "      <td>POLYGON ((-97.76454 30.32971, -97.75708 30.337...</td>\n",
+       "      <td>POLYGON ((-97.76454 30.32971, -97.76448 30.329...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1500000US484530001013</td>\n",
        "      <td>Block Group 3; Census Tract 1.01; Travis Count...</td>\n",
        "      <td>0</td>\n",
-       "      <td>POLYGON ((-97.75516 30.3177, -97.75348 30.3205...</td>\n",
+       "      <td>POLYGON ((-97.75516 30.3177, -97.7551 30.31788...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1500000US484530001014</td>\n",
        "      <td>Block Group 4; Census Tract 1.01; Travis Count...</td>\n",
        "      <td>13</td>\n",
-       "      <td>POLYGON ((-97.75718 30.30897, -97.75571 30.321...</td>\n",
+       "      <td>POLYGON ((-97.75718 30.30897, -97.75693 30.310...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1500000US484530001021</td>\n",
        "      <td>Block Group 1; Census Tract 1.02; Travis Count...</td>\n",
        "      <td>0</td>\n",
-       "      <td>POLYGON ((-97.78104 30.33242, -97.77693 30.335...</td>\n",
+       "      <td>POLYGON ((-97.78104 30.33242, -97.7801 30.3324...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -384,11 +384,11 @@
        "4  1500000US484530001021  Block Group 1; Census Tract 1.02; Travis Count...   \n",
        "\n",
        "   B02010_001E                                           geometry  \n",
-       "0           23  POLYGON ((-97.75553 30.33075, -97.75528 30.336...  \n",
-       "1            0  POLYGON ((-97.76454 30.32971, -97.75708 30.337...  \n",
-       "2            0  POLYGON ((-97.75516 30.3177, -97.75348 30.3205...  \n",
-       "3           13  POLYGON ((-97.75718 30.30897, -97.75571 30.321...  \n",
-       "4            0  POLYGON ((-97.78104 30.33242, -97.77693 30.335...  "
+       "0           23  POLYGON ((-97.75546 30.33233, -97.75538 30.335...  \n",
+       "1            0  POLYGON ((-97.76454 30.32971, -97.76448 30.329...  \n",
+       "2            0  POLYGON ((-97.75516 30.3177, -97.7551 30.31788...  \n",
+       "3           13  POLYGON ((-97.75718 30.30897, -97.75693 30.310...  \n",
+       "4            0  POLYGON ((-97.78104 30.33242, -97.7801 30.3324...  "
       ]
      },
      "execution_count": 4,
